# auperator

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  vector.example.yaml
docs/: README.md  architecture.md  implementation.md  index.md  installation.md  quickstart.md
docs/collector/: adapters.md  architecture.md  cli-reference.md  configuration.md  docker-source.md  overview.md  redis-mq.md
docs/deployment/: deployment.md  monitoring.md  troubleshooting.md
docs/development/: contributing.md  extending-adapters.md  extending-sources.md
src/auperator/: __init__.py  cli.py  config.py  main.py
src/auperator/collector/: __init__.py  cli.py  collector.py  consumer.py  models.py  position_manager.py  sender.py  vector_consumer.py
src/auperator/collector/adapters/: __init__.py  base.py  generic_adapter.py  json_adapter.py  vector_adapter.py
src/auperator/collector/handlers/: __init__.py  base.py  console.py  redis.py
src/auperator/collector/sources/: __init__.py  base.py  docker_source.py
src/auperator/deepagents/: __init__.py  builder.py
src/auperator/deepagents/backends/: __init__.py  composite.py  filesystem.py  local_shell.py  sandbox.py  state.py  store.py  utils.py
src/auperator/deepagents/middleware/: __init__.py  filesystem.py  memory.py  skills.py  subagents.py  summarization.py
src/auperator/deepagents/prompts/: system.py
src/auperator/deepagents/tools/: docker_tools.py
